Add course name to readme title

--- a/readme
+++ b/readme
@@ -1,6 +1,5 @@
+Welcome to the "Git for Beginners" MyProject
+
 Author: Igor Michailovich Nosonovich
-
-
-Welcome to myProject
 
 Twitter: @igornosonovich
