Add website to readme

--- a/readme
+++ b/readme
@@ -3,3 +3,5 @@ Welcome to the "Git for Beginners" MyProject
 Author: Igor Michailovich Nosonovich
 
 Twitter: @igornosonovich
+
+Website:www.igorNosonovich.com
