Add Github to readme

--- a/readme
+++ b/readme
@@ -5,3 +5,4 @@ Author: Igor Michailovich Nosonovich
 Twitter: @igornosonovich
 
 Website:https://www.igorNosonovich.com
+Github : https://github.com/IgorNos
